force-app/main/default/objects/Contact_Email__c/Contact_Email__c.object-meta.xml
<CustomObject>
    <description>This custom object will hold the emails related to a Contact.</description>
    <label>Contact Email</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Email ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Emails</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>