force-app/main/default/objects/Contact_Email__c/fields/Adestra_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Adestra_Contact_ID__c</fullName>
    <label>Adestra_Contact_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>