force-app/main/default/objects/Contact_Email__c/fields/Is_Automation_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Is_Automation_Bypassed__c</fullName>
    <description>Allows flow to bypass Validation Rules.</description>
    <formula>Automation_Bypass_Date_Time__c  &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Automation Bypassed?</label>
    <type>Checkbox</type>
</CustomField>