force-app/main/default/objects/Contact_Email__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Current&quot;</defaultValue>
    <description>Status of email on record.</description>
    <inlineHelpText>Indicates if email is current or former.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Undeliverable</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
                <isActive>false</isActive>
                <label>Former</label>
            </value>
            <value>
                <fullName>Former_Archived</fullName>
                <isActive>false</isActive>
                <label>Former_Archived</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>