force-app/main/default/objects/Contact_Email__c/fields/Sys_Missing_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sys_Missing_from_Contact__c</fullName>
    <description>Evaluates whether this email should be on the Contact record (i.e., is Current) but is missing.</description>
    <formula>IF ( ISPICKVAL(Status__c, &apos;Current&apos;) &amp;&amp; AND( Email__c!= Donor__r.npe01__HomeEmail__c, Email__c!=Donor__r.npe01__WorkEmail__c
 , Email__c!=Donor__r.npe01__AlternateEmail__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sys-Missing from Contact</label>
    <type>Checkbox</type>
</CustomField>